// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Html5 Player should renders correctly 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={false}
    className="widget-video-player-html5"
    controls={false}
    height="100%"
    loop={false}
    muted={false}
    poster="test"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
    <div />
  </video>
</div>
`;

exports[`Html5 Player should renders correctly with aspectRatio 1`] = `[Function]`;

exports[`Html5 Player should renders correctly with autoplay 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={true}
    className="widget-video-player-html5"
    controls={false}
    height="100%"
    loop={false}
    muted={false}
    poster="test"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
    <div />
  </video>
</div>
`;

exports[`Html5 Player should renders correctly with controls 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={false}
    className="widget-video-player-html5"
    controls={true}
    height="100%"
    loop={false}
    muted={false}
    poster="test"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
    <div />
  </video>
</div>
`;

exports[`Html5 Player should renders correctly with loop 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={false}
    className="widget-video-player-html5"
    controls={false}
    height="100%"
    loop={true}
    muted={false}
    poster="test"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
    <div />
  </video>
</div>
`;

exports[`Html5 Player should renders correctly with muted 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={false}
    className="widget-video-player-html5"
    controls={false}
    height="100%"
    loop={false}
    muted={true}
    poster="test"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
    <div />
  </video>
</div>
`;

exports[`Html5 Player should renders correctly with poster 1`] = `
<div
  className="widget-video-player-html5-container"
>
  <div
    className="video-error-label-html5"
  >
    The video failed to load :(
  </div>
  <video
    autoPlay={false}
    className="widget-video-player-html5"
    controls={false}
    height="100%"
    loop={false}
    muted={false}
    poster="https://www.mendix.com/wp-content/themes/mendix/ui/images/homepage/air-status-app@2x.png"
    preload="metadata"
  >
    <source
      onError={[Function]}
      onLoad={[Function]}
      src="test"
      type="video/mp4"
    />
    <div />
  </video>
</div>
`;
